--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,4 @@
-body {
-  background-color: yellow;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
